# visper-rust

./: Cargo.toml
src/: main.rs
visper-graphics/: Cargo.toml
visper-graphics/examples/: quad.rs
visper-graphics/src/: core.rs  lib.rs  renderer.rs
visper-graphics/src/core/: point.rs  rectangle.rs
visper-graphics/src/primitive/: quad.rs
visper-graphics/src/primitive/shaders/hello/: frag  shader.frag  shader.vert  vert
visper-graphics/src/renderer/: target.rs
visper-gui/: Cargo.toml
visper-gui/examples/: gui.rs
visper-gui/src/: lib.rs  proxy.rs
