[package]
name = "visper-graphics"
version = "0.1.0"
authors = ["artronics <jalalhosseiny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
winit = "0.21.0"
mockall = "0.6.0"

[dependencies]
wgpu = "0.4.0"
glam = "0.8.5"