[package]
name = "visper-gui"
version = "0.1.0"
authors = ["artronics <jalalhosseiny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visper-graphics = { path = "../visper-graphics" }
wgpu = "0.4.0"
#winit = { version = "0.20.0-alpha3", git = "https://github.com/hecrj/winit", rev = "709808eb4e69044705fcb214bcc30556db761405"}
futures = "0.3.4"
futures-sink = "0.3.4"
winit = "0.20.0-alpha3"
indextree = "4.0.0"
